--- a/BookIt/pom.xml
+++ b/BookIt/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.bookit/com.example.bookit.HelloApplication</mainClass>
+                            <mainClass>com.example.bookit/com.example.bookit.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
